# geofront

./: .gitignore  AGENT.md  AGENTS.md  Cargo.toml  README.md  build.mjs  package.json  tsconfig.json
.github/workflows/: build.yml  release.yml
assets/: default-favicon.txt
docs/: index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts
docs/api/: core.md  index.md  types-events.md  utils.md
docs/examples/: cache.md  hypixel.md  index.md  rate-limit.md
docs/guide/: architecture.md
example/: README.md  hypixel.ts  simple.ts
scripts/: vercel-ignored.sh
src/: cache.rs  cli.ts  connection.rs  ffi.rs  ffi_worker.ts  geofront.ts  globals.d.ts  lib.rs  logging.rs  motd.ts  protocol.rs  splice.rs  state.rs  types.rs
tests/: handshake_login_forwarding_test.ts  helpers.ts  hypixel_test.ts  motd_cache_integration_test.ts  simulated_hypixel_test.ts  simulated_limit_metrics_test.ts  simulated_proxy_protocol_test.ts  simulated_proxy_socks5_test.ts  simulated_proxy_test.ts  simulated_stress_test.ts
