[package]
name = "geofront"
version = "0.1.0"
edition = "2024"

[dependencies]
governor = "0.10.0"
lazy_static = "1.5.0"
nonzero_ext = "0.3.0"
tokio = { version = "1.46.1", features = ["rt", "macros", "rt-multi-thread"] }
tokio-socks = "0.5.2"
tokio-splice2 = "0.3.0-rc.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lib]
name = "geofront"
crate-type = ["cdylib"]
